tests/paczka1/fuzzy1/56372921.err
Error in line 2: t81pbtNv S537 15,9
Error in line 10: USRU S203 -1,8
Error in line 7: okPmqotTu A851 76,9
Error in line 13: ZA3 A85R 52,9
Error in line 8: GSRwnSP8jc A425 30,8
Error in line 17: GSRwnSP8jc S203 78,3
Error in line 5: ZA3 S537 17,0
Error in line 4: USRU S203 5,3
Error in line 27: GSRwnSP8jcA851128,6
Error in line 15: xyHQtF6k S203 66,5
Error in line 29: okPmqotTu A851 71,7
Error in line 30: xyHQtF6k S537 80,1
